2006-06-28  Jim Meyering  <jim@meyering.net>

	* src/c99-to-c89.diff: Regenerate, to remove fuzz.

2006-06-28  Bob Proulx  <bob@proulx.com>  (tiny change)

	* tests/mv/i-link-no: Work around HP-UX /bin/sh tracing problem
	(set -x when VERBOSE=yes) when stderr is redirected before stdout
	causing shell tracing of the stdout redirection to be written to
	the stderr file.  Avoid problem and test failure on HP-UX by
	redirecting stderr last.
	* tests/dd/unblock-sync: Order shell file redirections for
	stderr and stdout in the common style.
	tests/acl: Likewise.

2006-06-27  Jim Meyering  <jim@meyering.net>

	* tests/misc/cat-proc: Try to avoid any spurious numeric
	differences in frequently-changing /proc/cpuinfo.
	Reported by Nelson Beebe.

2006-06-26  Jim Meyering  <jim@meyering.net>

	Attempt rmdir (actually, unlinkat-with-AT_REMOVEDIR) upon any
	fd_to_subdirp failure, not just when errno == EACCES.
	* src/remove.c (remove_dir): Use unlinkat-with-AT_REMOVEDIR, not
	rmdir, here, even though rmdir may happen to be adequate.

	* NEWS: rm no longer fails to remove an empty, unreadable directory
	* src/remove.c (remove_cwd_entries): If we can't open a directory,
	and the failure is not being ignored, try to remove the directory
	with rmdir (aka unlinkat-with-AT_REMOVEDIR), in case it's empty.
	Problem report and test case from Paul Eggert in
	<http://article.gmane.org/gmane.comp.gnu.core-utils.bugs/7425>.

	* tests/rm/empty-inacc: New test, for the above.

	Avoid a segfault for wc --files0=- < /dev/null.
	* src/wc.c (compute_number_width): Return right away if nfiles == 0.

2006-06-25  Jim Meyering  <jim@meyering.net>

	* NEWS: wc accepts a new option --files0-from=FILE, where FILE
	contains a list of NUL-separated file names.

	* src/wc.c: Include "readtokens.h".
	(usage): Describe the new option, and adjust the `Usage':
	with this option, no FILE may be specified on the command line.
	(main): Handle the new option.
	* tests/misc/wc-files0: New tests, for the above.